--- a/CapstoneProject/Views/LampConnectedView.xaml
+++ b/CapstoneProject/Views/LampConnectedView.xaml
@@ -17,11 +17,11 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <!--  Overview Header  -->
-            <ColumnDefinition Width="180*" />
+            <ColumnDefinition Width="175*" MaxWidth="300" />
             <!--  Grid Splitter definition  -->
             <ColumnDefinition Width="5" />
             <!--  Daily Analysis Header  -->
-            <ColumnDefinition Width="270*" />
+            <ColumnDefinition Width="275*" />
         </Grid.ColumnDefinitions>
 
         <GridSplitter
