--- a/CapstoneProject/App.xaml
+++ b/CapstoneProject/App.xaml
@@ -3,9 +3,15 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
-        <Style TargetType="TextBox">
-            <Setter Property="Padding" Value="10,5" />
+        <Style x:Key="LongTextBox" TargetType="TextBox">
+            <Setter Property="Padding" Value="5,5" />
             <Setter Property="MinWidth" Value="100" />
+        </Style>
+
+        <Style x:Key="ShortTextBox" TargetType="TextBox">
+            <Setter Property="Padding" Value="4,4" />
+            <Setter Property="MinWidth" Value="25" />
+            <Setter Property="MinHeight" Value="25" />
         </Style>
 
         <Style x:Key="Header" TargetType="TextBlock">
