--- a/CapstoneProject/Views/LampOverviewView.xaml
+++ b/CapstoneProject/Views/LampOverviewView.xaml
@@ -223,7 +223,7 @@
                             Margin="0,0,0,-5"
                             Style="{StaticResource Property}"
                             Text="Automated" />
-                        <TextBlock Style="{StaticResource Property}" Text="Turn On/Off:" />
+                        <TextBlock Style="{StaticResource Property}" Text="Turn On Off:" />
                     </StackPanel>
                     <TextBlock
                         Grid.Column="2"
