--- a/CapstoneProject/Views/LampConnectionView.xaml
+++ b/CapstoneProject/Views/LampConnectionView.xaml
@@ -5,44 +5,100 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:views="clr-namespace:CapstoneProject.Views"
-    d:DesignHeight="450"
+    xmlns:sys="clr-namespace:System;assembly=mscorlib"
+    d:DesignHeight="300"
     d:DesignWidth="300"
     mc:Ignorable="d">
-    <Border
-        Margin="5,5"
-        Style="{StaticResource PanelBorder}">
+    <Border Margin="5,5" Style="{StaticResource PanelBorder}">
         <Grid>
             <Grid.RowDefinitions>
-                <!--  Contents definition  -->
-                <RowDefinition Height="Auto" />
+                <!--  Connection Properties definition  -->
+                <RowDefinition Height="4*" />
+                <!--  Buttons definition  -->
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
+            
+            <!--  Connection Properties  -->
+            <Grid Grid.Row="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
 
-            <!--  Contents  -->
-            <!--  Connection Content  -->
-            <Button
-                Grid.Row="0"
-                Grid.Column="0"
-                Margin="3,0,0,3"
-                Command="{Binding ConnectLampCommand}"
-                Style="{StaticResource Button}">
-                <Button.Resources>
-                    <Style TargetType="Border">
-                        <Setter Property="CornerRadius" Value="7" />
-                    </Style>
-                </Button.Resources>
-                <StackPanel Orientation="Horizontal">
+                <!--  Name  -->
+                <Border Grid.Row="0" Style="{StaticResource FloralPropertyBorder}" />
+                <Grid Grid.Row="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" SharedSizeGroup="TextBlockColumn" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.Resources>
+                        <ObjectDataProvider x:Key="odpPorts" ObjectType="{x:Type sys:Enum}">
+                            
+                            <ObjectDataProvider.MethodParameters>
+                                <x:Type TypeName=""></x:Type>
+                            </ObjectDataProvider.MethodParameters>
+                        </ObjectDataProvider>
+                    </Grid.Resources>
+                    
                     <Image
-                        MaxHeight="75"
-                        Margin="5"
-                        Source="pack://application:,,,/Icons/ConnectionStatus.png"
+                        Grid.Column="0"
+                        MaxHeight="60"
+                        Margin="7"
+                        Source="pack://application:,,,/Icons/UsbPort.png"
                         Stretch="Uniform" />
-                    <TextBlock
-                        Margin="0,0,5,0"
-                        VerticalAlignment="Center"
-                        FontSize="36"
-                        Text="Connect" />
-                </StackPanel>
-            </Button>
+                    <StackPanel
+                        Grid.Column="1"
+                        Margin="5,0,10,0"
+                        VerticalAlignment="Center">
+                        <TextBlock
+                            Margin="0,0,0,-5"
+                            Style="{StaticResource Property}"
+                            Text="Available" />
+                        <TextBlock Style="{StaticResource Property}" Text="Ports:" />
+                    </StackPanel>
+                    <ComboBox
+                        Grid.Column="2"
+                        VerticalAlignment="Center">
+                    </ComboBox>
+                </Grid>
+            </Grid>
+
+            <!--  Buttons  -->
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                
+                <Button
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    Margin="10,0,10,0"
+                    Command="{Binding ConnectLampCommand}"
+                    Style="{StaticResource Button}">
+                    <Button.Resources>
+                        <Style TargetType="Border">
+                            <Setter Property="CornerRadius" Value="7" />
+                        </Style>
+                    </Button.Resources>
+                    <StackPanel Orientation="Horizontal">
+                        <Image
+                            MaxHeight="30"
+                            Margin="5"
+                            Source="pack://application:,,,/Icons/ConnectionStatus.png"
+                            Stretch="Uniform" />
+                        <TextBlock
+                            Margin="0,0,5,0"
+                            VerticalAlignment="Center"
+                            FontSize="20"
+                            Text="Connect" />
+                    </StackPanel>
+                </Button>
+            </Grid>
         </Grid>
     </Border>
 </UserControl>
