--- a/CapstoneProject/Views/LampDailyAnalysisView.xaml
+++ b/CapstoneProject/Views/LampDailyAnalysisView.xaml
@@ -8,43 +8,68 @@
     d:DesignHeight="300"
     d:DesignWidth="500"
     mc:Ignorable="d">
-    <ListView
-        Margin="5,5"
-        HorizontalContentAlignment="Stretch"
-        Background="LightGray"
-        ItemsSource="{Binding LampDailyDataList}">
-        <ListView.ItemContainerStyle>
-            <Style TargetType="ListViewItem">
-                <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-            </Style>
-        </ListView.ItemContainerStyle>
+    <Border Margin="5,5" Style="{StaticResource PanelBorder}">
+        <ListView
+            Margin="5,5"
+            HorizontalContentAlignment="Stretch"
+            Background="LightGray"
+            ItemsSource="{Binding LampDailyDataList}">
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="HorizontalContentAlignment" Value="Center" />
+                    <Setter Property="Foreground" Value="Black" />
+                    <Setter Property="Background" Value="FloralWhite" />
+                </Style>
+            </ListView.ItemContainerStyle>
 
-        <ListView.View>
-            <GridView>
-                <GridViewColumn Header="Date">
-                    <GridViewColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBlock HorizontalAlignment="Center" Text="{Binding DateTime}" />
-                        </DataTemplate>
-                    </GridViewColumn.CellTemplate>
-                </GridViewColumn>
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Width="140">
+                        <GridViewColumnHeader 
+                            Background="AntiqueWhite" 
+                            Foreground="OrangeRed" 
+                            FontWeight="Bold">
+                            Date
+                        </GridViewColumnHeader>
+                        
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding DateTime}" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
 
-                <GridViewColumn Header="Battery Charge Time">
-                    <GridViewColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBlock HorizontalAlignment="Center" Text="{Binding BatteryChargeMin}" />
-                        </DataTemplate>
-                    </GridViewColumn.CellTemplate>
-                </GridViewColumn>
+                    <GridViewColumn Width="155">
+                        <GridViewColumnHeader 
+                            Background="FloralWhite"
+                            Foreground="OrangeRed" 
+                            FontWeight="Bold">
+                            Charge Time
+                        </GridViewColumnHeader>
+                        
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding BatteryChargeMin}" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
 
-                <GridViewColumn Header="Battery Consumption Time">
-                    <GridViewColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBlock HorizontalAlignment="Center" Text="{Binding BatteryConsumptionMin}" />
-                        </DataTemplate>
-                    </GridViewColumn.CellTemplate>
-                </GridViewColumn>
-            </GridView>
-        </ListView.View>
-    </ListView>
+                    <GridViewColumn Width="155">
+                        <GridViewColumnHeader 
+                            Background="AntiqueWhite"
+                            Foreground="OrangeRed" 
+                            FontWeight="Bold">
+                            Consumption Time
+                        </GridViewColumnHeader>
+                        
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding BatteryConsumptionMin}" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                </GridView>
+            </ListView.View>
+        </ListView>
+    </Border>
 </UserControl>
