--- a/CapstoneProject/Views/LampConnectionView.xaml
+++ b/CapstoneProject/Views/LampConnectionView.xaml
@@ -6,6 +6,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:views="clr-namespace:CapstoneProject.Views"
     xmlns:services="clr-namespace:CapstoneProject.Services"
+    xmlns:converters="clr-namespace:CapstoneProject.Converters"
     d:DesignHeight="300"
     d:DesignWidth="300"
     mc:Ignorable="d">
@@ -19,16 +20,16 @@
             </Grid.RowDefinitions>
             
             <!--  Connection Properties  -->
-            <Grid Grid.Row="0">
+            <Grid Grid.Row="0" IsSharedSizeScope="True">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" MaxHeight="60" />
+                    <RowDefinition Height="*" MaxHeight="60" />
+                    <RowDefinition Height="*" MaxHeight="60" />
+                    <RowDefinition Height="*" MaxHeight="60" />
                 </Grid.RowDefinitions>
 
                 <!--  Ports  -->
-                <Border Grid.Row="0" Style="{StaticResource FloralPropertyBorder}" />
+                <Border Grid.Row="0" Style="{StaticResource AntiquePropertyBorder}" />
                 <Grid Grid.Row="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
@@ -45,7 +46,7 @@
                     
                     <Image
                         Grid.Column="0"
-                        MaxHeight="40"
+                        MaxHeight="60"
                         Margin="7"
                         Source="pack://application:,,,/Icons/UsbPort.png"
                         Stretch="Uniform" />
@@ -61,11 +62,51 @@
                     </StackPanel>
                     <ComboBox
                         Grid.Column="2"
-                        FontSize="24"
                         VerticalAlignment="Center"
                         ItemsSource="{Binding Source={StaticResource OdpPorts}}"
                         SelectedItem="{Binding SelectedPort, UpdateSourceTrigger=PropertyChanged}">
                     </ComboBox>
+                </Grid>
+                
+                <!--  Dummy ID  -->
+                <Border Grid.Row="1" Style="{StaticResource FloralPropertyBorder}" />
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" SharedSizeGroup="TextBlockColumn" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.Resources>
+                        <ObjectDataProvider 
+                            x:Key="OdpPorts" 
+                            ObjectType="{x:Type services:LampConnectionService}"
+                            MethodName="GetPorts">
+                        </ObjectDataProvider>
+                    </Grid.Resources>
+                    
+                    <Image
+                        Grid.Column="0"
+                        MaxHeight="60"
+                        Margin="7"
+                        Source="pack://application:,,,/Icons/Id.png"
+                        Stretch="Uniform" />
+                    <TextBlock
+                        Grid.Column="1"
+                        Margin="5,0,10,0"
+                        VerticalAlignment="Center"
+                        Style="{StaticResource Property}"
+                        Text="Dummy ID:" />
+                    <TextBox
+                        Grid.Column="2"
+                        VerticalAlignment="Center"
+                        Style="{StaticResource ShortTextBox}"
+                        Text="{Binding DummyId, UpdateSourceTrigger=PropertyChanged}">
+                        <TextBox.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" Value="5" />
+                            </Style>
+                        </TextBox.Resources>
+                    </TextBox>
                 </Grid>
             </Grid>
 
@@ -79,16 +120,22 @@
                     Grid.Row="0"
                     Margin="10"
                     Command="{Binding ConnectLampCommand}"
-                    CommandParameter="{Binding SelectedPort}"
                     Style="{StaticResource Button}">
                     <Button.Resources>
                         <Style TargetType="Border">
                             <Setter Property="CornerRadius" Value="7" />
                         </Style>
+                        <converters:MultiParamConverter x:Key="MultiParamConverter"/>
                     </Button.Resources>
+                    <Button.CommandParameter>
+                        <MultiBinding Converter="{StaticResource MultiParamConverter}">
+                            <Binding Path="SelectedPort" />
+                            <Binding Path="DummyId" />
+                        </MultiBinding>
+                    </Button.CommandParameter>
                     <StackPanel Orientation="Horizontal">
                         <Image
-                            MaxHeight="30"
+                            MaxHeight="45"
                             Margin="5"
                             Source="pack://application:,,,/Icons/ConnectionStatus.png"
                             Stretch="Uniform" />
