--- a/CapstoneProject/Views/LampConnectionView.xaml
+++ b/CapstoneProject/Views/LampConnectionView.xaml
@@ -35,6 +35,7 @@
                         <ColumnDefinition Width="Auto" SharedSizeGroup="TextBlockColumn" />
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
+                    
                     <Grid.Resources>
                         <ObjectDataProvider 
                             x:Key="OdpPorts" 
@@ -67,7 +68,7 @@
                     </ComboBox>
                 </Grid>
                 
-                <!--  Dummy ID  -->
+                <!--  Dummy Lamp ID  -->
                 <Border Grid.Row="1" Style="{StaticResource FloralPropertyBorder}" />
                 <Grid Grid.Row="1">
                     <Grid.ColumnDefinitions>
@@ -75,13 +76,6 @@
                         <ColumnDefinition Width="Auto" SharedSizeGroup="TextBlockColumn" />
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
-                    <Grid.Resources>
-                        <ObjectDataProvider 
-                            x:Key="OdpPorts" 
-                            ObjectType="{x:Type services:LampConnectionService}"
-                            MethodName="GetPorts">
-                        </ObjectDataProvider>
-                    </Grid.Resources>
                     
                     <Image
                         Grid.Column="0"
@@ -89,17 +83,59 @@
                         Margin="7"
                         Source="pack://application:,,,/Icons/Id.png"
                         Stretch="Uniform" />
-                    <TextBlock
+                    <StackPanel
                         Grid.Column="1"
                         Margin="5,0,10,0"
-                        VerticalAlignment="Center"
-                        Style="{StaticResource Property}"
-                        Text="Dummy ID:" />
+                        VerticalAlignment="Center">
+                        <TextBlock
+                            Margin="0,0,0,-5"
+                            Style="{StaticResource Property}"
+                            Text="Dummy" />
+                        <TextBlock Style="{StaticResource Property}" Text="ID:" />
+                    </StackPanel>
                     <TextBox
                         Grid.Column="2"
                         VerticalAlignment="Center"
                         Style="{StaticResource ShortTextBox}"
-                        Text="{Binding DummyId, UpdateSourceTrigger=PropertyChanged}">
+                        Text="{Binding DummyLampId, UpdateSourceTrigger=PropertyChanged}">
+                        <TextBox.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" Value="5" />
+                            </Style>
+                        </TextBox.Resources>
+                    </TextBox>
+                </Grid>
+                
+                <!--  Dummy Lamp Name  -->
+                <Border Grid.Row="2" Style="{StaticResource AntiquePropertyBorder}" />
+                <Grid Grid.Row="2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" SharedSizeGroup="TextBlockColumn" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                   
+                    <Image
+                        Grid.Column="0"
+                        MaxHeight="60"
+                        Margin="7"
+                        Source="pack://application:,,,/Icons/Name.png"
+                        Stretch="Uniform" />
+                    <StackPanel
+                        Grid.Column="1"
+                        Margin="5,0,10,0"
+                        VerticalAlignment="Center">
+                        <TextBlock
+                            Margin="0,0,0,-5"
+                            Style="{StaticResource Property}"
+                            Text="Dummy" />
+                        <TextBlock Style="{StaticResource Property}" Text="Name:" />
+                    </StackPanel>
+                    <TextBox
+                        Grid.Column="2"
+                        VerticalAlignment="Center"
+                        Style="{StaticResource ShortTextBox}"
+                        Text="{Binding DummyLampName, UpdateSourceTrigger=PropertyChanged}">
                         <TextBox.Resources>
                             <Style TargetType="Border">
                                 <Setter Property="CornerRadius" Value="5" />
@@ -129,7 +165,8 @@
                     <Button.CommandParameter>
                         <MultiBinding Converter="{StaticResource MultiParamConverter}">
                             <Binding Path="SelectedPort" />
-                            <Binding Path="DummyId" />
+                            <Binding Path="DummyLampId" />
+                            <Binding Path="DummyLampName" />
                         </MultiBinding>
                     </Button.CommandParameter>
                     <StackPanel Orientation="Horizontal">
