--- a/CapstoneProject/Views/MainWindowView.xaml
+++ b/CapstoneProject/Views/MainWindowView.xaml
@@ -1,12 +1,12 @@
 ﻿<Window
-    x:Class="CapstoneProject.MainWindow"
+    x:Class="CapstoneProject.MainWindowView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:views="clr-namespace:CapstoneProject.Views"
     xmlns:vms="clr-namespace:CapstoneProject.ViewModels"
-    Title="Capstone"
+    Title="Solar Lamp"
     Width="800"
     Height="500"
     MinWidth="800"
@@ -16,12 +16,8 @@
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Grid Background="#232323">
-        <Grid Margin="10,10">
+        <Grid Margin="10">
             <Grid.Resources>
-                <!-- <DataTemplate DataType="{x:Type vms:$VIEW_MODEL_NAME$}"> -->
-                <!--     <views:$VIEW_NAME$ /> -->
-                <!-- </DataTemplate> -->
-
                 <DataTemplate DataType="{x:Type vms:LandingPageViewModel}">
                     <views:LandingPageView />
                 </DataTemplate>
