--- a/CapstoneProject/Views/LampSettingsView.xaml
+++ b/CapstoneProject/Views/LampSettingsView.xaml
@@ -125,169 +125,169 @@
                         </TextBox>
                     </Grid>
 
-                    <!--  On Time  -->
-                    <Border
-                        Grid.Row="2"
-                        Grid.Column="0"
-                        Style="{StaticResource AntiquePropertyBorder}" />
-                    <Grid Grid.Row="2" Grid.Column="0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="Auto" SharedSizeGroup="TextBlockColumn" />
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
-
-                        <Image
-                            Grid.Column="0"
-                            MaxHeight="60"
-                            Margin="7"
-                            Source="pack://application:,,,/Icons/OnTime.png"
-                            Stretch="Uniform" />
-                        <TextBlock
-                            Grid.Column="1"
-                            Margin="5,0,10,0"
-                            VerticalAlignment="Center"
-                            Style="{StaticResource Property}"
-                            Text="On Time:" />
-                        <TextBox
-                            Grid.Column="2"
-                            VerticalAlignment="Center"
-                            Style="{StaticResource ShortTextBox}"
-                            Text="{Binding OnTimeHour, UpdateSourceTrigger=PropertyChanged}">
-                            <TextBox.Resources>
-                                <Style TargetType="Border">
-                                    <Setter Property="CornerRadius" Value="5" />
-                                </Style>
-                            </TextBox.Resources>
-                        </TextBox>
-                        <TextBlock
-                            Grid.Column="3"
-                            VerticalAlignment="Center"
-                            Text="h" />
-                        <TextBox
-                            Grid.Column="4"
-                            Margin="8,0,0,0"
-                            VerticalAlignment="Center"
-                            Style="{StaticResource ShortTextBox}"
-                            Text="{Binding OnTimeMin, UpdateSourceTrigger=PropertyChanged}">
-                            <TextBox.Resources>
-                                <Style TargetType="Border">
-                                    <Setter Property="CornerRadius" Value="5" />
-                                </Style>
-                            </TextBox.Resources>
-                        </TextBox>
-                        <TextBlock
-                            Grid.Column="5"
-                            VerticalAlignment="Center"
-                            Text="m" />
-                    </Grid>
-
-                    <!--  Off Time  -->
-                    <Border
-                        Grid.Row="3"
-                        Grid.Column="0"
-                        Style="{StaticResource FloralPropertyBorder}" />
-                    <Grid Grid.Row="3" Grid.Column="0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="Auto" SharedSizeGroup="TextBlockColumn" />
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
-
-                        <Image
-                            Grid.Column="0"
-                            MaxHeight="60"
-                            Margin="7"
-                            Source="pack://application:,,,/Icons/OffTime.png"
-                            Stretch="Uniform" />
-                        <TextBlock
-                            Grid.Column="1"
-                            Margin="5,0,10,0"
-                            VerticalAlignment="Center"
-                            Style="{StaticResource Property}"
-                            Text="Off Time:" />
-                        <TextBox
-                            Grid.Column="2"
-                            VerticalAlignment="Center"
-                            Style="{StaticResource ShortTextBox}"
-                            Text="{Binding OffTimeHour, UpdateSourceTrigger=PropertyChanged}">
-                            <TextBox.Resources>
-                                <Style TargetType="Border">
-                                    <Setter Property="CornerRadius" Value="5" />
-                                </Style>
-                            </TextBox.Resources>
-                        </TextBox>
-                        <TextBlock
-                            Grid.Column="3"
-                            VerticalAlignment="Center"
-                            Text="h" />
-                        <TextBox
-                            Grid.Column="4"
-                            Margin="8,0,0,0"
-                            VerticalAlignment="Center"
-                            Style="{StaticResource ShortTextBox}"
-                            Text="{Binding OffTimeMin, UpdateSourceTrigger=PropertyChanged}">
-                            <TextBox.Resources>
-                                <Style TargetType="Border">
-                                    <Setter Property="CornerRadius" Value="5" />
-                                </Style>
-                            </TextBox.Resources>
-                        </TextBox>
-                        <TextBlock
-                            Grid.Column="5"
-                            VerticalAlignment="Center"
-                            Text="m" />
-                    </Grid>
-
-                    <!--  Automated Turn On/Off  -->
-                    <Border
-                        Grid.Row="4"
-                        Grid.Column="0"
-                        Style="{StaticResource AntiquePropertyBorder}" />
-                    <Grid Grid.Row="4" Grid.Column="0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="Auto" SharedSizeGroup="TextBlockColumn" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
-
-                        <Image
-                            Grid.Column="0"
-                            MaxHeight="60"
-                            Margin="7"
-                            Source="pack://application:,,,/Icons/AutomatedOnOff.png"
-                            Stretch="Uniform" />
-                        <StackPanel
-                            Grid.Column="1"
-                            Margin="5,0,10,0"
-                            VerticalAlignment="Center">
-                            <TextBlock
-                                Margin="0,0,0,-5"
-                                Style="{StaticResource Property}"
-                                Text="Automated" />
-                            <TextBlock Style="{StaticResource Property}" Text="Turn On Off:" />
-                        </StackPanel>
-                        <CheckBox
-                            Grid.Column="2"
-                            VerticalAlignment="Center"
-                            BorderThickness="0.5"
-                            IsChecked="{Binding Automated, UpdateSourceTrigger=PropertyChanged}">
-                            <CheckBox.LayoutTransform>
-                                <ScaleTransform ScaleX="2" ScaleY="2" />
-                            </CheckBox.LayoutTransform>
-                            <CheckBox.Resources>
-                                <Style TargetType="Border">
-                                    <Setter Property="CornerRadius" Value="3" />
-                                </Style>
-                            </CheckBox.Resources>
-                        </CheckBox>
-                    </Grid>
+                    <!-- ~1~  On Time  @1@ -->
+                    <!-- <Border -->
+                    <!--     Grid.Row="2" -->
+                    <!--     Grid.Column="0" -->
+                    <!--     Style="{StaticResource AntiquePropertyBorder}" /> -->
+                    <!-- <Grid Grid.Row="2" Grid.Column="0"> -->
+                    <!--     <Grid.ColumnDefinitions> -->
+                    <!--         <ColumnDefinition Width="Auto" /> -->
+                    <!--         <ColumnDefinition Width="Auto" SharedSizeGroup="TextBlockColumn" /> -->
+                    <!--         <ColumnDefinition Width="Auto" /> -->
+                    <!--         <ColumnDefinition Width="Auto" /> -->
+                    <!--         <ColumnDefinition Width="Auto" /> -->
+                    <!--         <ColumnDefinition Width="Auto" /> -->
+                    <!--     </Grid.ColumnDefinitions> -->
+                    <!-- -->
+                    <!--     <Image -->
+                    <!--         Grid.Column="0" -->
+                    <!--         MaxHeight="60" -->
+                    <!--         Margin="7" -->
+                    <!--         Source="pack://application:,,,/Icons/OnTime.png" -->
+                    <!--         Stretch="Uniform" /> -->
+                    <!--     <TextBlock -->
+                    <!--         Grid.Column="1" -->
+                    <!--         Margin="5,0,10,0" -->
+                    <!--         VerticalAlignment="Center" -->
+                    <!--         Style="{StaticResource Property}" -->
+                    <!--         Text="On Time:" /> -->
+                    <!--     <TextBox -->
+                    <!--         Grid.Column="2" -->
+                    <!--         VerticalAlignment="Center" -->
+                    <!--         Style="{StaticResource ShortTextBox}" -->
+                    <!--         Text="{Binding OnTimeHour, UpdateSourceTrigger=PropertyChanged}"> -->
+                    <!--         <TextBox.Resources> -->
+                    <!--             <Style TargetType="Border"> -->
+                    <!--                 <Setter Property="CornerRadius" Value="5" /> -->
+                    <!--             </Style> -->
+                    <!--         </TextBox.Resources> -->
+                    <!--     </TextBox> -->
+                    <!--     <TextBlock -->
+                    <!--         Grid.Column="3" -->
+                    <!--         VerticalAlignment="Center" -->
+                    <!--         Text="h" /> -->
+                    <!--     <TextBox -->
+                    <!--         Grid.Column="4" -->
+                    <!--         Margin="8,0,0,0" -->
+                    <!--         VerticalAlignment="Center" -->
+                    <!--         Style="{StaticResource ShortTextBox}" -->
+                    <!--         Text="{Binding OnTimeMin, UpdateSourceTrigger=PropertyChanged}"> -->
+                    <!--         <TextBox.Resources> -->
+                    <!--             <Style TargetType="Border"> -->
+                    <!--                 <Setter Property="CornerRadius" Value="5" /> -->
+                    <!--             </Style> -->
+                    <!--         </TextBox.Resources> -->
+                    <!--     </TextBox> -->
+                    <!--     <TextBlock -->
+                    <!--         Grid.Column="5" -->
+                    <!--         VerticalAlignment="Center" -->
+                    <!--         Text="m" /> -->
+                    <!-- </Grid> -->
+                    <!-- -->
+                    <!-- ~1~  Off Time  @1@ -->
+                    <!-- <Border -->
+                    <!--     Grid.Row="3" -->
+                    <!--     Grid.Column="0" -->
+                    <!--     Style="{StaticResource FloralPropertyBorder}" /> -->
+                    <!-- <Grid Grid.Row="3" Grid.Column="0"> -->
+                    <!--     <Grid.ColumnDefinitions> -->
+                    <!--         <ColumnDefinition Width="Auto" /> -->
+                    <!--         <ColumnDefinition Width="Auto" SharedSizeGroup="TextBlockColumn" /> -->
+                    <!--         <ColumnDefinition Width="Auto" /> -->
+                    <!--         <ColumnDefinition Width="Auto" /> -->
+                    <!--         <ColumnDefinition Width="Auto" /> -->
+                    <!--         <ColumnDefinition Width="Auto" /> -->
+                    <!--     </Grid.ColumnDefinitions> -->
+                    <!-- -->
+                    <!--     <Image -->
+                    <!--         Grid.Column="0" -->
+                    <!--         MaxHeight="60" -->
+                    <!--         Margin="7" -->
+                    <!--         Source="pack://application:,,,/Icons/OffTime.png" -->
+                    <!--         Stretch="Uniform" /> -->
+                    <!--     <TextBlock -->
+                    <!--         Grid.Column="1" -->
+                    <!--         Margin="5,0,10,0" -->
+                    <!--         VerticalAlignment="Center" -->
+                    <!--         Style="{StaticResource Property}" -->
+                    <!--         Text="Off Time:" /> -->
+                    <!--     <TextBox -->
+                    <!--         Grid.Column="2" -->
+                    <!--         VerticalAlignment="Center" -->
+                    <!--         Style="{StaticResource ShortTextBox}" -->
+                    <!--         Text="{Binding OffTimeHour, UpdateSourceTrigger=PropertyChanged}"> -->
+                    <!--         <TextBox.Resources> -->
+                    <!--             <Style TargetType="Border"> -->
+                    <!--                 <Setter Property="CornerRadius" Value="5" /> -->
+                    <!--             </Style> -->
+                    <!--         </TextBox.Resources> -->
+                    <!--     </TextBox> -->
+                    <!--     <TextBlock -->
+                    <!--         Grid.Column="3" -->
+                    <!--         VerticalAlignment="Center" -->
+                    <!--         Text="h" /> -->
+                    <!--     <TextBox -->
+                    <!--         Grid.Column="4" -->
+                    <!--         Margin="8,0,0,0" -->
+                    <!--         VerticalAlignment="Center" -->
+                    <!--         Style="{StaticResource ShortTextBox}" -->
+                    <!--         Text="{Binding OffTimeMin, UpdateSourceTrigger=PropertyChanged}"> -->
+                    <!--         <TextBox.Resources> -->
+                    <!--             <Style TargetType="Border"> -->
+                    <!--                 <Setter Property="CornerRadius" Value="5" /> -->
+                    <!--             </Style> -->
+                    <!--         </TextBox.Resources> -->
+                    <!--     </TextBox> -->
+                    <!--     <TextBlock -->
+                    <!--         Grid.Column="5" -->
+                    <!--         VerticalAlignment="Center" -->
+                    <!--         Text="m" /> -->
+                    <!-- </Grid> -->
+                    <!-- -->
+                    <!-- ~1~  Automated Turn On/Off  @1@ -->
+                    <!-- <Border -->
+                    <!--     Grid.Row="4" -->
+                    <!--     Grid.Column="0" -->
+                    <!--     Style="{StaticResource AntiquePropertyBorder}" /> -->
+                    <!-- <Grid Grid.Row="4" Grid.Column="0"> -->
+                    <!--     <Grid.ColumnDefinitions> -->
+                    <!--         <ColumnDefinition Width="Auto" /> -->
+                    <!--         <ColumnDefinition Width="Auto" SharedSizeGroup="TextBlockColumn" /> -->
+                    <!--         <ColumnDefinition Width="Auto" /> -->
+                    <!--     </Grid.ColumnDefinitions> -->
+                    <!-- -->
+                    <!--     <Image -->
+                    <!--         Grid.Column="0" -->
+                    <!--         MaxHeight="60" -->
+                    <!--         Margin="7" -->
+                    <!--         Source="pack://application:,,,/Icons/AutomatedOnOff.png" -->
+                    <!--         Stretch="Uniform" /> -->
+                    <!--     <StackPanel -->
+                    <!--         Grid.Column="1" -->
+                    <!--         Margin="5,0,10,0" -->
+                    <!--         VerticalAlignment="Center"> -->
+                    <!--         <TextBlock -->
+                    <!--             Margin="0,0,0,-5" -->
+                    <!--             Style="{StaticResource Property}" -->
+                    <!--             Text="Automated" /> -->
+                    <!--         <TextBlock Style="{StaticResource Property}" Text="Turn On Off:" /> -->
+                    <!--     </StackPanel> -->
+                    <!--     <CheckBox -->
+                    <!--         Grid.Column="2" -->
+                    <!--         VerticalAlignment="Center" -->
+                    <!--         BorderThickness="0.5" -->
+                    <!--         IsChecked="{Binding Automated, UpdateSourceTrigger=PropertyChanged}"> -->
+                    <!--         <CheckBox.LayoutTransform> -->
+                    <!--             <ScaleTransform ScaleX="2" ScaleY="2" /> -->
+                    <!--         </CheckBox.LayoutTransform> -->
+                    <!--         <CheckBox.Resources> -->
+                    <!--             <Style TargetType="Border"> -->
+                    <!--                 <Setter Property="CornerRadius" Value="3" /> -->
+                    <!--             </Style> -->
+                    <!--         </CheckBox.Resources> -->
+                    <!--     </CheckBox> -->
+                    <!-- </Grid> -->
                 </Grid>
 
                 <!--  Buttons  -->
